[package]
name = "rust-rocket"
version = "0.3.2"
authors = ["Tim Peters <mail@darksecond.nl>"]
license = "MIT"
description = """
A client implementation of GNU Rocket.
"""
repository = "https://github.com/darksecond/rust-rocket"

[dependencies]
byteorder = "1"
serde = "1.0"
serde_derive = "1.0"
serde-xml-rs = "0.2.1"

